attempt to fix bug where screen shrinks when using inputs on mobile

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -7,7 +7,8 @@ table {
 }
 
 canvas {
-  position: sticky !important;
+  position: absolute !important;
+  min-height: 800px;
 }
 
 p, a, td {
